first commit( test)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /nbproject/private/private.properties
 /nbproject/project.properties
 /nbproject/project.xml
+/public_html/exercise1/solution/Vova/nbproject/private/
