--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /nbproject/project.properties
 /nbproject/project.xml
 /public_html/exercise1/solution/Vova/nbproject/private/
+/HTML5Application/nbproject/private/
