--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /nbproject/project.xml
 /public_html/exercise1/solution/Vova/nbproject/private/
 /HTML5Application/nbproject/private/
+/public_html/html&css/exercise2/telller/telller/nbproject/private/
