--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /HTML5Application/nbproject/private/
 /public_html/html&css/exercise2/telller/telller/nbproject/private/
 /public_html/js/exercise3/telller/angular-seed/node_modules
+/public_html/js/exercise3/telller/angular-seed/app/bower_components
