--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 /public_html/exercise1/solution/Vova/nbproject/private/
 /HTML5Application/nbproject/private/
 /public_html/html&css/exercise2/telller/telller/nbproject/private/
+/public_html/js/exercise3/EarlOld/angular-seed/node_modules
 /public_html/js/exercise3/telller/angular-seed/node_modules
 /public_html/js/exercise3/telller/angular-seed/app/bower_components
