--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@
 /public_html/html&css/exercise2/telller/telller/nbproject/private/
 /public_html/js/exercise3/EarlOld/angular-seed/node_modules
 /public_html/js/exercise3/EarlOld/node_modules
+/public_html/js/exercise4/EarlOld/node_modules
 /public_html/js/exercise3/telller/angular-seed/node_modules
 /public_html/js/exercise3/telller/angular-seed/app/bower_components
